Satisfying bowers requirements for module names

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "checkMQ",
+  "name": "checkmq",
   "version": "1.0.0",
   "homepage": "https://github.com/jonnyhaynes/checkmq",
   "authors": [
