--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "Media Queries in JavaScript",
   "main": "js/dist/checkMQ.min.js",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
