--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "jshint": "^2.8.0",
     "onchange": "^2.0.0",
     "uglify-js": "^2.6.1"
   },
   "scripts": {
     "watch": "onchange 'src/*' 'test/*' -- npm run build",
-    "build": "babel src/checkMQ.js --out-file dist/checkMQ.js && uglifyjs dist/checkMQ.js -o dist/checkMQ.min.js"
+    "build": "babel src/checkMQ.js --out-file dist/checkMQ.js && uglifyjs dist/checkMQ.js -o dist/checkMQ.min.js",
+    "test": "jshint src/checkMQ.js"
   },
   "repository": {
     "type": "git",
