--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "javascript"
   ],
   "author": [
+    "Jonny Haynes <jonny@colouringcode.com>",
     "Oliver Farrell <oliver@oliverjfarrell.co.uk>"
   ],
   "license": "MIT",
